nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__includes_dependents.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(deps)" ]
    3 [ label="RunTask(deps:base)" ]
    4 [ label="RunTask(deps:internal)" ]
    5 [ label="SyncSystemProject(deps-external)" ]
    6 [ label="RunTask(deps-external:external)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    3 -> 2 [ ]
    4 -> 2 [ ]
    4 -> 3 [ ]
    5 -> 1 [ ]
    5 -> 2 [ ]
    6 -> 5 [ ]
    6 -> 3 [ ]
}

