nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__runs_deps_in_parallel.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(cases)" ]
    3 [ label="RunTask(cases:parallel)" ]
    4 [ label="RunTask(cases:c)" ]
    5 [ label="RunTask(cases:a)" ]
    6 [ label="RunTask(cases:b)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    4 -> 2 [ ]
    5 -> 2 [ ]
    6 -> 2 [ ]
    3 -> 2 [ ]
    3 -> 4 [ ]
    3 -> 5 [ ]
    3 -> 6 [ ]
}

