nextgen/action-graph/tests/snapshots/action_graph_test__action_graph__run_task_dependencies__runs_deps_in_serial.snap
---
source: nextgen/action-graph/tests/action_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" ]
    1 [ label="SetupSystemTool" ]
    2 [ label="SyncSystemProject(deps)" ]
    3 [ label="RunTask(deps:serial)" ]
    4 [ label="RunTask(deps:b)" ]
    5 [ label="RunTask(deps:c)" ]
    6 [ label="RunTask(deps:a)" ]
    1 -> 0 [ ]
    2 -> 1 [ ]
    4 -> 2 [ ]
    5 -> 2 [ ]
    5 -> 4 [ ]
    6 -> 2 [ ]
    6 -> 5 [ ]
    3 -> 2 [ ]
    3 -> 6 [ ]
}

